--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "lodash.debounce": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "lodash.debounce": "latest"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@vitejs/plugin-react": "^4.2.1",
     "typescript": "4.4.2",
-    "vite": "^5.0.11",
-    "@vitejs/plugin-react": "^4.2.1"
+    "vite": "^5.0.11"
   },
   "scripts": {
     "dev": "vite",
